app/assets/stylesheets/browse.css
.browse-container {
  -webkit-animation: fadein 1s;
  -moz-animation: fadein 1s;
  -ms-animation: fadein 1s;
  -o-animation: fadein 1s;
  animation: fadein 1s;
}

.arrow {
  top: 5px;
  height: calc(100% - 5px);
  width: 18%;
  opacity: 0.4;
  background-color: black;
  position: absolute;
  z-index: 5;
  cursor: pointer;
}

.left {
  right: 90.9%;
}

.right {
  left: calc(90.9% + 1px);
}

.arrow:hover {
  opacity: 0.7;
}

.arrow:hover .arrowline {
  display: block;
}

/*.darken {
  filter: brightness(60%);
}

.darken:hover {
  filter: brightness(30%);
}*/


.top-recording-title {
  font-family: Ubuntu;
  text-align: left;
}

.browse-slider {
  position: relative;
  display: flex;
  margin: 10px 0;
  width: 100%;
  white-space: nowrap;
  overflow-y: visible;
}


.slider-container {
  margin: 30px 5px 0 5px;
}

.slider-item {
  cursor: pointer;
  position: relative;
  flex: 0 0 calc(18.2% - 2px);
  margin: 5px 1px 0px 1px;
  right: 0;
  transition: 0.5s linear;
  flex-direction: column;
}

.arrowline {
  position: absolute;
  display: none;
  width: 30%;
  height: 5%;
  background-color: white;
}

.description-arrow {
  position: absolute;
  width: 17%;
  height: 3%;
  background-color: white;
}

.left-arrow {
  left: 35%;
  transform: rotate(30deg);
}

.right-arrow {
  right: 35%;
  transform: rotate(-30deg);
}

.right .top {
  top: 36%;
  left: 12%;
  border-top-right-radius: 3px;
  transform: rotate(60deg);
}

.right .bot {
 bottom: 36%;
 left: 12%;
 border-bottom-right-radius: 3px;
 transform: rotate(-60deg);
}

.left .top {
  top: 36%;
  right: 12%;
  border-top-left-radius: 3px;
  transform: rotate(-60deg);
}

.left .bot {
 bottom: 36%;
 right: 12%;
 border-bottom-left-radius: 3px;
 transform: rotate(60deg);
}

.slider-item:hover {
  transform: translateY(-10px);
}

.slider-item:hover .recording-title-container {
  opacity: 1;
}

.recording-title-container {
  transition: 0.5s linear;
  opacity: 0;
  background-color:rgba(0, 0, 0, 0.5);
  width: 100%;
  position: absolute;
  top: 0px;
  white-space: normal;
}

.recording-title {
  padding: 2px 5px;
  font-size: 12px;
  color: white;
}

.thumbnail-container {
  position: relative;
  height: 0;
  padding-top: 100%;
}

.recording-description {
  color: white;
  font-size: 10px;
  padding: 3px;
}

.more-description {
  display: block;
  padding: 5% 0;
}

.more-description:hover {
  border-color: white;
}

.thumbnail {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-size: cover;
  background-position: 50% 50%;
  background-repeat: no-repeat;
}

